--- a/contact.html
+++ b/contact.html
@@ -33,10 +33,10 @@
           </nav>
           <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
         <!-- Container -->
-        <div class="container-sm"> 
+        <div class="container"> 
             <h1> Contact </h1>
             <form>
-                <div class="form-floating mb-3">
+                <div class="form-floating mb-3 ">
                   <label for="inputName1" class="form-label">Name</label>
                   <input type="name" class="form-control" id="inputName1" aria-describedby="nameHelp" placeholder="Name">
                   
