--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
               <div class="collapse navbar-collapse" id="#navbarMenu">
               <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a>
-                    <li class="nav-item"><a class="nav-link" href="index.html">Index</a>
+                    <li class="nav-item"><a class="nav-link" href="index.html">About</a>
                     <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a>
                     </li>         
               </ul>
@@ -56,4 +56,5 @@
         </div>
         
     </body>
+    
 </html>
