Updated Contact me and Portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,47 +1,55 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <!-- Basic HTML Setup -->
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title> Contact Page </title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-        <!-- Bootstrap CDN -->
+
+<head>
+  <!-- Basic HTML Setup -->
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title> Contact Page </title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="">
+  <!-- Bootstrap CDN -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
-    </head>
+</head>
 
-    <body>
-        <!-- Nav Bar -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-              <a class="navbar-brand bg-info text-white" href="contact.html">Christian Bryant</a>
-              <button class="navbar-toggler" data-toggler="collapse" data-target="#navbarMenu">
-                  <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="#navbarMenu">
-              <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a>
-                    <li class="nav-item"><a class="nav-link" href="index.html">About</a>
-                    <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a>
-                    </li>         
-              </ul>
-            </div>
-        
-          </nav>
-          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-        <!-- Container -->
-        <div class="container col-6 float-left text-info bg-white"> <br/>
-            <h1> Portfolio </h1><br/>
-            <div class="row">
-              <div class="col-md-6">
-                <img src="http://placehold.it/150x150" alt="Placeholder" class="img-thumbnail">
-                <img src="http://placehold.it/150x150" alt="Placeholder" class="img-thumbnail">
-                <img src="http://placehold.it/150x150" alt="Placeholder" class="img-thumbnail">
-                <img src="http://placehold.it/150x150" alt="Placeholder" class="img-thumbnail">
-                <img src="http://placehold.it/150x150" alt="Placeholder" class="img-thumbnail">
-       </div>
+<body>
+  <!-- Nav Bar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand bg-info text-white" href="contact.html">Christian Bryant</a>
+    <button class="navbar-toggler" data-toggler="collapse" data-target="#navbarMenu">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="#navbarMenu">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a>
+        <li class="nav-item"><a class="nav-link" href="index.html">About</a>
+        <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a>
+        </li>
+      </ul>
+    </div>
+
+  </nav>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+    crossorigin="anonymous"></script>
+  <!-- Container -->
+  <div class="container col-6 float-left text-info bg-white"> <br />
+    <h1> Portfolio </h1><br />
+    <div class="row">
+      <div class="col-md-6">
+        <a href="https://christian-bryant2020.github.io/Weather-Dashboard/">
+          <img src="Images\Porject1.PNG" alt="Placeholder" class="img-thumbnail">
+        </a>
+        <a href="https://christian-bryant2020.github.io/Password_Generator/">
+          <img src="Images\Project2.PNG" alt="Placeholder" class="img-thumbnail">
+        </a>
+        <a href="https://wrp90.github.io/project1/">
+          <img src="Images\Project3.PNG" alt="Placeholder" class="img-thumbnail">
+        </a>
+
+      </div>
 
 
 </html>
