--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
         <!-- Container -->
         <div class="container col-6 float-left text-info bg-white"> <br/>
             <h1> About Me </h1>
+            <h6> E: bryant.christian00@gmail.com</h6>
+            <h6> P: (407) 635-7037</h6>
             <div class="row">
                 <div class="col-md-6">
                   <img src="Images\Headshot.jpg" class= "float-left">
@@ -43,10 +45,10 @@
                    and I knew I wanted to use my skills and dedication to make a difference in this world. I enrolled into 
                    the University of Texas Full Stack Developemnt Bootcamp in December of 2020 and have been marching full speed
                    ahead since. Making the world a better place has been at the heart of my dedication and actions. Within my 
-                   portfolio you will find your next best friend with my PetFinder application that searches a database of nearby 
+                   portfolio you will find your next best friend with my Pet Cupid application that searches a database of nearby 
                    shelters by pet type. Once you find your partner in crime, stop by my VaccineTracker to post and keep track of
                    your vaccine status and ensure you remember that second appointment. Please feel free to stop by my contact 
-                   page and send suggestions or comments! Thank you for stopping by!
+                   page and send suggestions or comments and view my Linkedin and Github! Thank you for stopping by!
                   </p>
        </div>
 
