--- a/portfolio.html
+++ b/portfolio.html
@@ -39,15 +39,24 @@
     <h1> Portfolio </h1><br />
     <div class="row">
       <div class="col-md-6">
+        <p>Weather Dashboard</p>
         <a href="https://christian-bryant2020.github.io/Weather-Dashboard/">
           <img src="Images\Porject1.PNG" alt="Placeholder" class="img-thumbnail">
         </a>
+        <a href="https://christian-bryant2020.github.io/Weather-Dashboard/">Deployed Link</a>
+        <a href="https://github.com/Christian-Bryant2020/Weather-Dashboard">Github Link</a>
+        <p>Password Generator</p>
         <a href="https://christian-bryant2020.github.io/Password_Generator/">
           <img src="Images\Project2.PNG" alt="Placeholder" class="img-thumbnail">
         </a>
+        <a href="https://christian-bryant2020.github.io/Password_Generator/">Deployed Link </a>
+        <a href="https://github.com/Christian-Bryant2020/Password_Generator">Github Link</a>
+        <p>Pet Cupid</p>
         <a href="https://wrp90.github.io/project1/">
           <img src="Images\Project3.PNG" alt="Placeholder" class="img-thumbnail">
         </a>
+        <a href="https://wrp90.github.io/project1/">Deployed Link </a>
+        <a href="https://github.com/wrp90/project1">Github Link</a>
 
       </div>
 
